Fixed the mobile font being too short

--- a/style.css
+++ b/style.css
@@ -823,7 +823,7 @@ html body {
         font-size: 1rem;
     }
     #content-label {
-        font-size: 0.5rem !important;
+        font-size: 1rem !important;
     }
     #time-delete-div {
         flex-direction: column !important;
